k8s/vault/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: vaultwarden
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/component: vaultwarden
  type: ClusterIP
